src/test/ui/issues/issue-22034.stderr
error[E0277]: the trait bound `(): std::ops::Fn<()>` is not satisfied
  --> $DIR/issue-22034.rs:18:16
   |
LL |         &mut *(ptr as *mut Fn())
   |                ^^^ the trait `std::ops::Fn<()>` is not implemented for `()`
   |
   = note: required for the cast to the object type `dyn std::ops::Fn()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
